# Na0S

./: .dockerignore  .gitignore  BENCHMARK_SPRINT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP_V2.md  SECURITY.md  THREAT_TAXONOMY.md  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements.txt
.claude/agent-memory/security-research-auditor/: MEMORY.md  c1-compliance-evasion-research.md  cascade-integration-testing.md  competitive-landscape-2026.md  d3-structural-boundary-research.md  d4-encoding-obfuscation-research.md  d5-unicode-evasion-research.md  d6-multilingual-research.md  d7-payload-delivery-research.md  d8-context-manipulation-research.md  e1-prompt-extraction-research.md  e2-reconnaissance-research.md  ensemble-pipeline-research.md  exif-xmp-metadata-audit.md  false-positives-research.md  file-detection-research.md  fingerprint-isolation-research.md  grammarly-style-detector-research.md  model-selection-audit-2026-02-18.md  novel-rules-research.md  o1-o2-harmful-content-research.md  openclaw-security-mapping.md  output-scanner-test-research.md  p1-privacy-leakage-research.md  pyyaml-security-research.md  rag-security-research.md  rule-context-awareness-research.md  rules-engine-research.md  scan-integration-test-research.md  tr39-confusables-research.md  worm-detection-research.md
.claude/agents/: l3-l5-code-auditor.md  layer-9-11-auditor.md  layer6-8-auditor.md  security-research-auditor.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_negative.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  pr-check.yml
data/: datasets.yaml  tags.misp.tsv  taxonomy.yaml
data/benchmark/: test_sample.jsonl
data/raw/: safe_prompts.csv
docs/: ARCHITECTURE.md  STANDARDS.md  TAXONOMY.md  TRAINING.md
scripts/: benchmark.py  download_datasets.py  evaluate_llm_judge.py  evaluate_probes.py  features.py  features_embedding.py  generate_readme_assets.py  generate_taxonomy_samples.py  merge_taxonomy_data.py  mine_hard_negatives.py  model.py  model_embedding.py  optimize_threshold.py  process_data.py  safe_yaml.py  sync_datasets.py
scripts/taxonomy/: __init__.py  _base.py  _buffs.py  _core.py  _tags.py  adversarial_ml.py  agent_tool_abuse.py  compliance_evasion.py  context_overflow.py  data_source_poisoning.py  exfiltration.py  html_markup_injection.py  instruction_override.py  multilingual.py  multimodal_injection.py  obfuscation_encoding.py  output_manipulation.py  payload_delivery.py  persona_roleplay.py  privacy_data_leakage.py  resource_availability.py  structural_boundary.py  supply_chain.py  unicode_evasion.py
scripts/wrappers/: __init__.py  base.py  llm_guard.py  prompt_guard.py
src/: cascade.py  dataset.py  features.py  features_embedding.py  llm_checker.py  model.py  model_embedding.py  obfuscation.py  output_scanner.py  positive_validation.py  predict.py  predict_embedding.py  process_data.py  rules.py  scan_result.py
src/data/: fingerprints.db-shm
src/layer0/: __init__.py  content_type.py  doc_extractor.py  encoding.py  html_extractor.py  input_loader.py  language_detector.py  mime_parser.py  normalization.py  ocr_extractor.py  pii_detector.py  resource_guard.py  result.py  safe_regex.py  sanitizer.py  timeout.py  tokenization.py  validation.py
src/na0s/: __init__.py  __main__.py  canary.py  cascade.py  cli.py  ensemble.py  llm_checker.py  llm_judge.py  obfuscation.py  output_scanner.py  positive_validation.py  predict.py  predict_embedding.py  rules.py  safe_pickle.py  scan_result.py  structural_features.py
src/na0s/layer0/: __init__.py  content_type.py  doc_extractor.py  encoding.py  entropy_check.py  html_extractor.py  normalization.py  ocr_extractor.py  pii_detector.py  resource_guard.py  safe_regex.py  sanitizer.py  tokenization.py  unicode_stego.py  validation.py
src/na0s/layer1/: __init__.py  analyzer.py  ascii_art_detector.py  context.py  (+9 more)
tests/: test_ascii_art_detector.py  test_cascade_fixes.py  test_cascade_integration.py  test_chunked_analysis.py  test_ci_smoke.py  test_cli.py  test_competitor_wrappers.py  test_configurable_threshold.py  test_content_type.py  test_content_type_mismatch.py  test_doc_extractor.py  test_dockerfile.py  test_download_datasets.py  test_elapsed_ms.py  test_encoding.py  test_ensemble.py  test_entropy_check.py  test_exif_metadata.py  test_exif_xmp_extraction.py  test_false_positives.py  test_ftfy_integration.py  test_homoglyph_detection.py  test_html_extractor.py  test_input_loader.py  test_ioc_extractor.py  test_l0_config.py  test_l0_flag_mapping.py  test_l2_obfuscation_fixes.py  test_language_detector.py  test_layer0_hypothesis.py  test_layer0_size_gate.py  test_llm_checker.py  test_llm_judge_hardening.py  test_matryoshka.py  test_mime_parser.py  test_morse_code.py  test_numeric_decode.py  test_obfuscation.py  test_ocr_extractor.py  test_open_redirect.py  (+45 more)
(+9 files in other folders)
