[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "na0s"
version = "0.1.0"
description = "Multi-layer prompt injection detection for LLM applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mehrnoosh Abrishamchian"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["prompt-injection", "llm", "security", "ai-safety", "guardrails"]

dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "chardet>=5.0",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.2",
]
ocr = [
    "easyocr>=1.7",
    "Pillow>=10.0",
]
docs = [
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "striprtf>=0.0.22",
]
llm = [
    "openai>=1.0",
    "groq>=0.4",
]
all = [
    "na0s[embedding,ocr,docs,llm]",
]
dev = [
    "coverage>=7.0",
    "flake8>=6.0",
    "hypothesis>=6.0",
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/mehrnoosh-a/Na0S"
Issues = "https://github.com/mehrnoosh-a/Na0S/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["na0s*"]

[tool.setuptools.package-data]
"na0s.models" = ["*.pkl", "*.sha256"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["na0s"]
omit = ["scripts/*", "tests/*"]
